// Vitest Snapshot v1

exports[`SortableTable.vue > matches snapshot with entries and action col props assigned 1`] = `
"<table>
  <!-- Table col definition -->
  <colgroup>
    <col class=\\"\\" />
    <col class=\\"\\" />
    <col class=\\"bg-gray-100 dark:bg-gray-800\\" />
    <col />
  </colgroup><!-- Table header -->
  <thead>
    <tr>
      <th class=\\"space-x-1 cursor-pointer select-none group\\"><span>Title</span><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" aria-hidden=\\"true\\" role=\\"img\\" class=\\"inline-block w-4 h-4 group-hover:opacity-100 opacity-50\\" preserveAspectRatio=\\"xMidYMid meet\\" viewBox=\\"0 0 320 512\\">
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </svg></th>
      <th class=\\"space-x-1 cursor-pointer select-none group\\"><span>Created</span><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" aria-hidden=\\"true\\" role=\\"img\\" class=\\"inline-block w-4 h-4 group-hover:opacity-100 opacity-50\\" preserveAspectRatio=\\"xMidYMid meet\\" viewBox=\\"0 0 320 512\\">
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </svg></th>
      <th class=\\"bg-white dark:bg-gray-700 space-x-1 cursor-pointer select-none group\\"><span>Last modified</span><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" aria-hidden=\\"true\\" role=\\"img\\" class=\\"inline-block w-4 h-4 group-hover:opacity-100 opacity-100\\" preserveAspectRatio=\\"xMidYMid meet\\" viewBox=\\"0 0 320 512\\">
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </svg></th>
      <!--v-if-->
    </tr>
  </thead><!-- Table body -->
  <tbody>
    <tr>
      <!-- @slot Sortable table content. @binding entry, activeSortKey -->
      <td class=\\"\\">B title</td>
      <td class=\\"\\">2013-02-01</td>
      <td class=\\"active\\">2013-10-10</td>
    </tr>
    <tr>
      <!-- @slot Sortable table content. @binding entry, activeSortKey -->
      <td class=\\"\\">A title</td>
      <td class=\\"\\">2000-01-01</td>
      <td class=\\"active\\">2014-11-12</td>
    </tr>
  </tbody>
</table>"
`;

exports[`SortableTable.vue > matches snapshot with entries but no action col props assigned 1`] = `
"<table>
  <!-- Table col definition -->
  <colgroup>
    <col class=\\"\\" />
    <col class=\\"\\" />
    <col class=\\"bg-gray-100 dark:bg-gray-800\\" />
    <col />
  </colgroup><!-- Table header -->
  <thead>
    <tr>
      <th class=\\"space-x-1 cursor-pointer select-none group\\"><span>Title</span><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" aria-hidden=\\"true\\" role=\\"img\\" class=\\"inline-block w-4 h-4 group-hover:opacity-100 opacity-50\\" preserveAspectRatio=\\"xMidYMid meet\\" viewBox=\\"0 0 320 512\\">
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </svg></th>
      <th class=\\"space-x-1 cursor-pointer select-none group\\"><span>Created</span><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" aria-hidden=\\"true\\" role=\\"img\\" class=\\"inline-block w-4 h-4 group-hover:opacity-100 opacity-50\\" preserveAspectRatio=\\"xMidYMid meet\\" viewBox=\\"0 0 320 512\\">
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </svg></th>
      <th class=\\"bg-white dark:bg-gray-700 space-x-1 cursor-pointer select-none group\\"><span>Last modified</span><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" aria-hidden=\\"true\\" role=\\"img\\" class=\\"inline-block w-4 h-4 group-hover:opacity-100 opacity-100\\" preserveAspectRatio=\\"xMidYMid meet\\" viewBox=\\"0 0 320 512\\">
          <!--v-if-->
          <!--v-if-->
          <!--v-if-->
        </svg></th>
      <th class=\\"select-none\\"><span>Actions</span></th>
    </tr>
  </thead><!-- Table body -->
  <tbody>
    <tr>
      <!-- @slot Sortable table content. @binding entry, activeSortKey -->
      <td class=\\"\\">B title</td>
      <td class=\\"\\">2013-02-01</td>
      <td class=\\"active\\">2013-10-10</td><!-- This is the unsortable action column -->
      <td class=\\"action-col text-right\\"><button class=\\"btn btn-link text-red-300 btn-sm\\"><i class=\\"fas fa-trash\\"></i> Remove entry </button></td>
    </tr>
    <tr>
      <!-- @slot Sortable table content. @binding entry, activeSortKey -->
      <td class=\\"\\">A title</td>
      <td class=\\"\\">2000-01-01</td>
      <td class=\\"active\\">2014-11-12</td><!-- This is the unsortable action column -->
      <td class=\\"action-col text-right\\"><button class=\\"btn btn-link text-red-300 btn-sm\\"><i class=\\"fas fa-trash\\"></i> Remove entry </button></td>
    </tr>
  </tbody>
</table>"
`;

exports[`SortableTable.vue > matches snapshot with no props assigned 1`] = `
"<table>
  <!-- Table col definition -->
  <colgroup>
    <col />
  </colgroup><!-- Table header -->
  <thead>
    <tr>
      <!--v-if-->
    </tr>
  </thead><!-- Table body -->
  <tbody></tbody>
</table>"
`;
